[PAY-3898] Fix product features alignment

--- a/packages/web/src/public-site/pages/landing-page/components/Hero.module.css
+++ b/packages/web/src/public-site/pages/landing-page/components/Hero.module.css
@@ -197,7 +197,7 @@
   font-weight: 700;
   text-align: center;
   transform: scale3d(1, 1, 1);
-  margin-right: 48px;
+  margin-right: 16px;
 }
 
 .ctaButton path {
